2006-06-18  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/gnome-system-monitor.schemas.in:

	Bumped version number to 2.15.0.
	Updated schema.

2006-06-03  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/load-graph.c:
	
	Dropped anonymous union to fix build with !gcc.

2006-05-17  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	* configure.in:

	Released 2.14.3.

2006-05-17  Benoît Dejean  <benoit@placenet.org>

	* src/procman.c: (procman_free_data):

	Free users at exit.

2006-05-10  Benoît Dejean  <benoit@placenet.org>

	* src/prettytable.c: (new_application), (pretty_table_new):

	Fixed a couple of small leaks.

2006-05-08  Benoît Dejean  <benoit@placenet.org>

	* src/gnome-system-monitor.schemas.in:
	
	Display CPU% by default.
	Closes #341026.

2006-05-05  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	
	Released 2.14.2.

2006-05-05  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/proctable.c: (get_process_memory_writable):
	
	Writable memory is sum(private_dirty) on linux.
	Other systems don't implement this.

2006-04-29  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* po/LINGUAS:
	
	Use po/LINGUAS.
	Closes #337963.

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2006-04-10  Benoît Dejean  <benoit@placenet.org>

	* NEWS:

	Released 2.14.1.
	Fixed ChangeLog.

2006-04-10  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/Makefile.am:
	* src/procdialogs.c: (procdialog_create_root_password_dialog):
	* src/procman_gksu.c: (procman_gksu_create_root_password_dialog):

	Updated gksu backend.

2006-04-09  Benoît Dejean  <benoit@placenet.org>

	* src/load-graph.c: (load_graph_new):
	
	Sets the minimum height of each graph to 30px.
	Patch by Johannes H. Jensen  <joh@deworks.net>.
	Bug #324257.

2006-04-07  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/disks.c: (create_disk_view):