@@ -1,5 +1,11 @@
 2006-06-18  Benoît Dejean  <benoit@placenet.org>
 
+	* src/proctable.c: (create_proctree), (proctable_new):
+
+	Displays process arguments as a tooltip if libsexy is found.
+
+2006-06-18  Benoît Dejean  <benoit@placenet.org>
+
 	* configure.in:
 	* src/gnome-system-monitor.schemas.in:
 
